# mcp-bash

./: .gitignore  CONTRIBUTING.md  README.md  example_client.py  pyproject.toml  server.py
