[project]
name = "mcp-bash-server"
version = "0.1.0"
description = "A simple Model-Context-Protocol (MCP) server for executing bash commands"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mcp-bash"
"Bug Tracker" = "https://github.com/yourusername/mcp-bash/issues"
